struct MyStruct {
  1: optional string a
}